--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^1.0.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -31,9 +32,12 @@
     "@nestjs/typeorm": "^9.0.1",
     "@types/helmet": "^4.0.0",
     "@types/winston": "^2.4.4",
+    "axios": "^1.3.0",
+    "cheerio": "^1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "helmet": "^6.0.1",
+    "htmlparser2": "^8.0.1",
     "mongodb": "^4.13.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -47,6 +51,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cheerio": "^0.22.31",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
